# ataraxiac

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
examples/: comments.aaa  fib.aaa  type_error.aaa
src/: ast.rs  ataraxia.lalrpop  main.rs  preprocessor.rs
