[package]
name = "ataraxiac"
version = "0.0.0"
authors = ["z"]

[build-dependencies]
lalrpop = "*"

[dependencies]
lalrpop-util = "*"
regex = "*"

[dependencies.rug]
version = "*"
default-features = false
features = ["integer"]

[features]
default = []

[profile.release]
lto = true
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
rpath = false
codegen-units = 1
